Worked on making the message output more homogenous between commands

--- a/gpibtester.conf
+++ b/gpibtester.conf
@@ -7,4 +7,5 @@ logConsoleLevel = 2 # Use any value between 1 (logs everything) and 5 (logs only
 [gpib]
 gpibDevice = GPIB0::5::INSTR
 #gpibDevice =
+gpibResponseTimeout = 30 # in seconds
 
