--- a/gpibtester.conf
+++ b/gpibtester.conf
@@ -1,11 +1,11 @@
 [logging]
-logFileName = template.log
+logFileName = gpibtester.log
 logFileSize = 102400 # Maximum log File size in bytes
 logFileLevel =  1 # Use any value between 1 (logs everything) and 5 (logs only critical errors)
 logConsoleLevel = 2 # Use any value between 1 (logs everything) and 5 (logs only critical errors)
 
 [gpib]
-#gpibDevice = GPIB0::5::INSTR
-gpibDevice =
+gpibDevice = GPIB0::5::INSTR
+#gpibDevice =
 gpibResponseTimeout = 30 # in seconds
 
