--- a/gpibtester.conf
+++ b/gpibtester.conf
@@ -5,7 +5,7 @@ logFileLevel =  1 # Use any value between 1 (logs everything) and 5 (logs only c
 logConsoleLevel = 2 # Use any value between 1 (logs everything) and 5 (logs only critical errors)
 
 [gpib]
-#gpibDevice = GPIB0::5::INSTR
-gpibDevice =
+gpibDevice = GPIB0::5::INSTR
+#gpibDevice =
 gpibResponseTimeout = 30 # in seconds
 
