some small fixes for Windows concerning previous commit

--- a/gpibcs.conf
+++ b/gpibcs.conf
@@ -5,10 +5,9 @@ logFileLevel =  1 # Use any value between 1 (logs everything) and 5 (logs only c
 logConsoleLevel = 2 # Use any value between 1 (logs everything) and 5 (logs only critical errors)
 
 [gpib]
-gpibDevice = GPIB0::5::INSTR
+gpibDevice = #GPIB0::5::INSTR
 gpibResponseTimeout = 3 # in seconds
 
-
 [gui]
-lastuseddir = /tmp # not set by gpibcs (yet), has to be set manually
-autoloaddirs = /home/dari/Work/gpibcs/sequence, /tmp
+lastuseddir = C:\ # not set by gpibcs (yet), has to be set manually
+autoloaddirs = C:\Program Files\GPIBCS\sequence, C:\my\sequence\autoload\dir
