added config options to autoload sequences

--- a/gpibcs.conf
+++ b/gpibcs.conf
@@ -8,3 +8,7 @@ logConsoleLevel = 2 # Use any value between 1 (logs everything) and 5 (logs only
 gpibDevice = GPIB0::5::INSTR
 gpibResponseTimeout = 3 # in seconds
 
+
+[gui]
+lastuseddir = /tmp # not set by gpibcs (yet), has to be set manually
+autoloaddirs = /home/dari/Work/gpibcs/sequence, /tmp
