--- a/gpibcs.conf
+++ b/gpibcs.conf
@@ -1,14 +1,14 @@
 [logging]
-logFileName = gpibcs.log
-logFileSize = 102400 # Maximum log File size in bytes
-logFileLevel =  1 # Use any value between 1 (logs everything) and 5 (logs only critical errors)
-logConsoleLevel = 2 # Use any value between 1 (logs everything) and 5 (logs only critical errors)
+logfilename = gpibcs.log
+logfilesize = 102400
+logfilelevel = 1
+logconsolelevel = 2
 
 [gpib]
-gpibDevice = GPIB0::5::INSTR
-gpibResponseTimeout = 3 # in seconds
-
+gpibdevice = GPIB0::5::INSTR
+gpibresponsetimeout = 3
 
 [gui]
-lastuseddir = /tmp # not set by gpibcs (yet), has to be set manually
+lastuseddir = /home/dari/Work/gpibcs/sequence
 autoloaddirs = /home/dari/Work/gpibcs/sequence, /tmp
+
