--- a/gpibcs.conf
+++ b/gpibcs.conf
@@ -1,13 +1,13 @@
 [logging]
 logFileName = gpibcs.log
-logFileSize = 102400 # Maximum log File size in bytes
-logFileLevel =  1 # Use any value between 1 (logs everything) and 5 (logs only critical errors)
-logConsoleLevel = 2 # Use any value between 1 (logs everything) and 5 (logs only critical errors)
+logFileSize = 102400
+logFileLevel =  1
+logConsoleLevel = 2
 
 [gpib]
-gpibDevice = #GPIB0::5::INSTR
-gpibResponseTimeout = 3 # in seconds
+gpibDevice = GPIB0::5::INSTR
+gpibResponseTimeout = 3
 
 [gui]
-lastuseddir = C:\ # not set by gpibcs (yet), has to be set manually
+lastuseddir = C:\Program Files\GPIBCS\sequence
 autoloaddirs = C:\Program Files\GPIBCS\sequence, C:\my\sequence\autoload\dir
