--- a/gpibcs.conf
+++ b/gpibcs.conf
@@ -1,13 +1,14 @@
 [logging]
-logFileName = gpibcs.log
-logFileSize = 102400
-logFileLevel =  1
-logConsoleLevel = 2
+logfilename = gpibcs.log
+logfilesize = 102400
+logfilelevel = 1
+logconsolelevel = 2
 
 [gpib]
-gpibDevice = GPIB0::5::INSTR
-gpibResponseTimeout = 3
+gpibdevice = GPIB0::5::INSTR
+gpibresponsetimeout = 3
 
 [gui]
-lastuseddir = C:\Program Files\GPIBCS\sequence
+lastuseddir = C:/Users/Administrator.ROY-73H3EV6HCL4/Desktop/gpibcs/sequence
 autoloaddirs = C:\Program Files\GPIBCS\sequence, C:\my\sequence\autoload\dir
+
