added device selector, updated doc

--- a/gpibcs.conf
+++ b/gpibcs.conf
@@ -5,10 +5,10 @@ logfilelevel = 1
 logconsolelevel = 2
 
 [gpib]
-gpibdevice = 
+gpibdevice = GPIB0::2::INSTR
 gpibresponsetimeout = 3
 
 [gui]
-lastuseddir = C:/Users/Administrator.ROY-73H3EV6HCL4/Desktop/gpibcs/sequence
+lastuseddir = /home/dari/Work/gpibcs/sequence
 autoloaddirs = C:\Program Files\GPIBCS\sequence, C:\my\sequence\autoload\dir
 
