Fixed bug in device selection

--- a/gpibcs.conf
+++ b/gpibcs.conf
@@ -5,10 +5,10 @@ logfilelevel = 1
 logconsolelevel = 2
 
 [gpib]
-gpibdevice = GPIB0::2::INSTR
+gpibdevice = GPIB0::5::INSTR
 gpibresponsetimeout = 3
 
 [gui]
-lastuseddir = /home/dari/Work/gpibcs/sequence
-autoloaddirs = C:\Program Files\GPIBCS\sequence, C:\my\sequence\autoload\dir
+lastuseddir = C:\Program Files\GPIBCS\sequence
+autoloaddirs = C:\Program Files\GPIBCS\sequence
 
